--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 annotated-types==0.7.0
 anyio==4.9.0
+cffi==1.17.1
 click==8.2.1
+cryptography==45.0.3
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
+pycparser==2.22
 pydantic==2.11.5
 pydantic_core==2.33.2
 PyMySQL==1.1.1
